Updated button display on welcome page to correct button rendering on mobile.

--- a/public/stylesheets/main2.css
+++ b/public/stylesheets/main2.css
@@ -318,4 +318,8 @@
     input[type=text], input[type=tel], input[type=email], input[ype=password] {
         font-size: 16px;
     }
+
+    .login-signup {
+        display: block;
+    }
 }
